<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="phoneAppLabel" product="default">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="callFailed_cb_enabled">You can\'t make outgoing calls while call barring is on.</string>
    <string name="callFailed_incoming_cb_enabled">Party has barred all Incoming calls.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="enter_input">USSD message must be between <xliff:g id="min_len" >%d</xliff:g> and <xliff:g id="max_len" >%d</xliff:g> characters. Please try again.</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="modify_call_prompt_yes">Yes</string>
    <string name="modify_call_prompt_no">No</string>
    <string name="modify_call_failure_str">Modify Call request failed\n</string>
    <string name="modify_call_option_title">Which type of call?</string>
    <string name="modify_call_option_vt">VT</string>
    <string name="modify_call_option_vt_tx">Video transmit</string>
    <string name="modify_call_option_vt_rx">Video receive</string>
    <string name="modify_call_option_voice">Voice Only</string>
    <string name="accept_modify_call_request_prompt">Accept modify call request?</string>
    <string name="upgrade_vt_prompt">Would you like to upgrade the call to video call?</string>
    <string name="upgrade_vt_tx_prompt">Would you like to upgrade the call to video transmit only call?</string>
    <string name="upgrade_vt_rx_prompt">Would you like to upgrade the call to video receive only call?</string>
    <string name="vt_init_fail_str">VT initialization failed. Downgrading call to VoLTE\n</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="label_nsdp">SIM network subset unlock PIN</string>
    <string name="label_cdp">SIM corporate unlock PIN</string>
    <string name="label_spdp">SIM service provider unlock PIN</string>
    <string name="label_sdp">SIM unlock PIN</string>
    <string name="label_rn1dp">RUIM network1 unlock PIN</string>
    <string name="label_rn2dp">RUIM network2 unlock PIN</string>
    <string name="label_rhrpd">RUIM hrpd unlock PIN</string>
    <string name="label_rcdp">RUIM corporate unlock PIN</string>
    <string name="label_rspdp">RUIM service provider unlock PIN</string>
    <string name="label_rdp">RUIM unlock PIN</string>
    <string name="label_puk">Enter PUK</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_nw_unlock">Requesting SIM network unlock\u2026</string>
    <string name="requesting_nw_subset_unlock">Requesting SIM network subset unlock\u2026</string>
    <string name="requesting_sp_unlock">Requesting SIM service provider unlock\u2026</string>
    <string name="requesting_corporate_unlock">Requesting SIM corporate unlock\u2026</string>
    <string name="requesting_sim_unlock">Requesting SIM unlock\u2026</string>
    <string name="requesting_rnw1_unlock">Requesting RUIM network1 unlock\u2026</string>
    <string name="requesting_rnw2_unlock">Requesting RUIM network2 unlock\u2026</string>
    <string name="requesting_rhrpd_unlock">Requesting RUIM hrpd unlock\u2026</string>
    <string name="requesting_rsp_unlock">Requesting RUIM service provider unlock\u2026</string>
    <string name="requesting_rc_unlock">Requesting RUIM corporate unlock\u2026</string>
    <string name="requesting_ruim_unlock">Requesting RUIM unlock\u2026</string>
    <string name="requesting_puk_unlock">Requesting PUK unlock\u2026</string>
    <string name="nw_unlock_failed">SIM Network unlock request unsuccessful.</string>
    <string name="nw_subset_unlock_failed">SIM Network Subset unlock request unsuccessful.</string>
    <string name="sp_unlock_failed">SIM Service Provider unlock request unsuccessful.</string>
    <string name="corporate_unlock_failed">SIM Corporate unlock request unsuccessful.</string>
    <string name="sim_unlock_failed">SIM unlock request unsuccessful.</string>
    <string name="rnw1_unlock_failed">RUIM Network1 unlock request unsuccessful.</string>
    <string name="rnw2_unlock_failed">RUIM Network2 unlock request unsuccessful.</string>
    <string name="rhrpd_unlock_failed">RUIM Hrpd unlock request unsuccessful.</string>
    <string name="rsp_unlock_failed">RUIM Service Provider unlock request unsuccessful.</string>
    <string name="rc_unlock_failed">RUIM Corporate unlock request unsuccessful.</string>
    <string name="ruim_unlock_failed">RUIM unlock request unsuccessful.</string>
    <string name="puk_unlock_failed">PUK unlock unsuccessful.</string>
    <string name="nw_unlock_success">SIM Network unlock successful.</string>
    <string name="nw_subset_unlock_success">SIM Network Subset unlock successful.</string>
    <string name="sp_unlock_success">SIM Service Provider unlock successful.</string>
    <string name="corporate_unlock_success">SIM Corporate unlock successful.</string>
    <string name="sim_unlock_success">SIM unlock successful.</string>
    <string name="rnw1_unlock_success">RUIM Network1 unlock successful.</string>
    <string name="rnw2_unlock_success">RUIM Network2 unlock successful.</string>
    <string name="rhrpd_unlock_success">RUIM Hrpd unlock successful.</string>
    <string name="rsp_unlock_success">RUIM Service Provider unlock successful.</string>
    <string name="rc_unlock_success">RUIM Corporate unlock successful.</string>
    <string name="ruim_unlock_success">RUIM unlock successful.</string>
    <string name="puk_unlock_success">PUK unlock successful.</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="requesting_unlock">Requesting network unlock…</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="mwi_notification_title">Message Wait Indicator</string>
    <string name="mwi_notification_summary">Show message wait indicator voicemail notifications</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings\u2026</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="default_preference_summary">&lt;Not set&gt;</string>
    <string translatable="false" name="domain_address">SipDomain</string>
    <string name="ims_edit_title">IMS account details</string>
    <string name="ims_domain_address_title">IMS Server</string>
    <string translatable="false" name="call_type">CallType</string>
    <string name="call_type_title">IMS Call type</string>
    <string translatable="false" name="default_ims_call_type">Voice</string>
    <string translatable="false" name="use_ims_default">UseImsDefault</string>
    <string name="use_ims_default_title">Use IMS Always</string>
    <string name="use_ims_default_summary">Use IMS for all voice calls</string>
    <string name="blacklist_title">Blacklist</string>
    <string name="enable_blacklist_title">Enable blacklist</string>
    <string name="blacklist_notify">Show notification</string>
    <string name="blacklist_regex_title">Use wildcards</string>
    <string name="blacklist_regex_summary">Use . as a wildcard and * for repetition. E.g. 123.* blocks numbers starting with 123 and .*123.* blocks numbers containing 123</string>
    <string name="add_blacklist_number">Add phone number</string>
</resources>